soft some delete done

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
