--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-query-devtools": "^5.71.5",
+    "@tanstack/react-virtual": "^3.13.12",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
