--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "kor-to-number": "^1.1.5",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
