--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+
+    "quill": "^2.0.2",
     "swiper": "^11.2.6",
     "zod": "^4.1.11"
   },
@@ -47,9 +49,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
     "@types/node": "22.13.14",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@types/quill": "^2.0.0",
+        "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
