--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.895.0",
     "@aws-sdk/lib-storage": "^3.895.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/extension-accelerate": "^2.0.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
@@ -30,6 +31,7 @@
     "kor-to-number": "^1.1.5",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "quill": "^2.0.2",
     "react": "^19.0.0",
     "react-advanced-cropper": "^0.20.1",
     "react-datepicker": "^8.2.1",
@@ -38,8 +40,6 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
-
-    "quill": "^2.0.2",
     "swiper": "^11.2.6",
     "zod": "^4.1.11"
   },
@@ -49,10 +49,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
     "@types/node": "22.13.14",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "@types/quill": "^2.0.0",
-        "eslint": "^9",
+    "@types/quill": "^2.0.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
