--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-query-devtools": "^5.71.5",
     "@tanstack/react-virtual": "^3.13.12",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -40,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "recharts": "^3.2.1",
     "swiper": "^11.2.6",
     "zod": "^4.1.11"
   },
