--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "^15.5.5",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@sentry/nextjs": "^10.20.0",
+    "@slack/webhook": "^7.0.6",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.71.5",
@@ -38,14 +40,14 @@
     "date-fns-tz": "^3.2.0",
     "kor-to-number": "^1.1.5",
     "lucide-react": "^0.487.0",
-    "next": "^15.2.4",
+    "next": "^15.5.6",
     "quill": "^2.0.2",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-advanced-cropper": "^0.20.1",
     "react-datepicker": "^8.2.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "recharts": "^3.2.1",
@@ -59,11 +61,11 @@
     "@types/jest": "^30.0.0",
     "@types/node": "22.13.14",
     "@types/quill": "^2.0.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "cross-env": "^10.1.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "^15.5.6",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "prisma": "^6.16.2",
