--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^19.2.0",
     "react-advanced-cropper": "^0.20.1",
     "react-datepicker": "^8.2.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.0",
