--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "recharts": "^3.2.1",
+    "sharp": "^0.34.4",
     "swiper": "^11.2.6",
     "zod": "^4.1.11"
   },
