--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "@types/recharts": "^1.8.29",
     "axios": "^1.12.2",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
